[package]
name = "axis_labels_rs"
description = "Optimally readable axis labels for terminal plots."
version = "0.3.0"
authors = ["Olav Stetter <olav.stetter@googlemail.com>"]
license = "MIT"
repository = "https://github.com/olavolav/axis_labels_rs"
keywords = ["plotting", "charts", "cli"]
categories = ["visualization", "command-line-interface"]
readme = "README.md"
edition = "2021"
exclude = [".github/*"]

[lib]
name = "axis_labels_rs"
path = "src/lib.rs"

[dependencies]
